--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-svelte-ts-starter",
+  "name": "kemet-ui-integration-svelte",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,18 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^5.1.13",
-    "svelte-check": "^4.0.6",
-    "tslib": "^2.8.1",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10"
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tsconfig/svelte": "^5.0.5",
+    "@types/node": "^24.6.0",
+    "svelte": "^5.39.6",
+    "svelte-check": "^4.3.2",
+    "typescript": "~5.9.3",
+    "vite": "^7.1.7"
   },
   "dependencies": {
-    "kemet-ui": "^3.1.0"
+    "kemet-ui": "^4.0.1"
   }
 }
